# lvtn-harvester

./: CHANGELOG.md  CONTRIBUTING.md  README.md  alembic.ini  config.py  pyproject.toml
alembic/: env.py
alembic/versions/: 60221bf79bdd_create_db.py
docs/: conf.py  design.md  index.md  installation.md  todos.md  usage.md
lvtn1_harvester/: cli.py
lvtn1_harvester/crawler/: handlers.py  settings.py
lvtn_harvester/: cli.py  models.py  scrapy.cfg
lvtn_harvester/crawler/: exporters.py  handlers.py  items.py  pipelines.py  settings.py  storages.py
lvtn_harvester/crawler/spiders/: seeds.py
tests/: __init__.py  func_test_crawl.py  test_base.py  test_crawler_items.py  test_models.py  test_web_crawl.py
tests/stubdata/: JATS-archivearticle1.dtd
