[project]
name = "lvtn_harvester"
version = "0.0.1"
description = "Laviattan, layer 1, Harvester District"
license = { text = "MIT" }
readme = "README.md"
repository = "https://github.com/adsabs/lvtn_harvester"
documentation = "https://lvtn_harvester.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

packages = [
    "lvtn_harvester",
]

dependencies = [
    "Scrapy==2.6.1",
    "lvtn1_utils@ git+https://github.com/adsabs/lvtn1-utils@main#egg=lvtn1_utils",
    "adsingestp@ git+https://github.com/adsabs/ADSIngestParser@main#egg=adsingestp",
]

[[project.authors]]
name = "Roman Chyla"
email = "roman.chyla@gmail.com"

[project.urls]
Source = "https://github.com/adsabs/lvtn_harvester"
Documentation = "https://lvtn_harvester.readthedocs.io"
[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "flake8==4.0.1",
    "isort==5.10.1",
    "pytest==6.2.5",
    "pyupgrade==2.29.1",
    "pytest-mock==3.6.1",
    "pre-commit==2.16.0",
    "coveralls==3.3.1",
    "mock==4.0.3",
    "coverage==6.2",
    "pytest-cov==3.0.0",
    "semantic-release==0.1.0",
    "testing.postgresql==1.3.0",
    "psycopg2==2.9.3"
]

docs = [
    "Sphinx==4.3.1",
    "myst-parser==0.15.2",
    "sphinx-rtd-theme==1.0.0",
]

[tool.acutter]
template = "python_package"
[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
version_variable = "lvtn_harvester/version.py:__version__"
build_command = "flit build"
[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=lvtn_harvester"
cache_dir = ".tmp/"
testpaths = [
    "tests",
]

[tool.coverage.run]
data_file = ".tmp/.coverage"

[tool.coverage.report]
skip_empty = true
skip_covered = true
[tool.isort]
profile = "black"
known_first_party = [
    "lvtn_harvester",
    "tests",
]

[tool.black]
line-length = 95

[build-system]
requires = [
    "setuptools==60.10.0",
    "wheel",
    "flit_core >=3.2,<4",
    "ppsetuptools==2.0.2",
]

build-backend = "flit_core.buildapi"

[xsetup]
scripts = [
]

[xsetup.entry_points]
console_scripts = [
    "harvester=lvtn_harvester.cli:cli",
]
